--- a/view/popov/user/edit.phtml
+++ b/view/popov/user/edit.phtml
@@ -1,41 +1,42 @@
 <?php
-$controller = $this->layout()->route->getParam('controller');
-$action = $this->layout()->route->getParam('action');
-$classActiveLi = 'ui-tabs-active ui-state-active';
+/**
+ * The MIT License (MIT)
+ * Copyright (c) 2017 Serhii Popov
+ * This source file is subject to The MIT License (OSL 3.0)
+ * that is bundled with this package in the file LICENSE.txt.
+ * It is also available through the world-wide-web at this URL:
+ * https://opensource.org/licenses/MIT
+ *
+ * @category Popov
+ * @package Popov_Hello
+ * @author Serhii Popov <popow.sergiy@gmail.com>
+ * @license https://opensource.org/licenses/MIT The MIT License (MIT)
+ */
+$form->setAttribute('action', $this->url('default/id', [
+    'controller' => $this->current('route')->getParam('controller'),
+    'action' => $this->current('route')->getParam('action'),
+    'id' => $this->current('route')->getParam('id', 0),
+]));
+
+#$form->setAttribute('class','form-horizontal');
+$form->prepare();
 ?>
-<div class="body-content-layout">
-<div class="ui-tabs ui-widget ui-widget-content ui-corner-all">
-	<ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
-		<li class="ui-state-default ui-corner-top<?=($action == 'add' || $action == 'edit') ? ' '.$classActiveLi : ''?>">
-			<a href="<?=$this->url('default/id', [
-				'controller' => $controller,
-				'action'     => 'edit',
-				'id'		 => (int) $id,
-			])?>" class="ui-tabs-anchor">Основные данные</a>
-		</li>
-		<?php
-		$buttonsArgs['history'] = [
-			'href'       => $this->url('default/id', [
-				'controller' => $controller,
-				'action'     => 'history',
-				'id'		 => (int) $id,
-			]),
-			'controller' => $controller,
-			'action'     => 'history',
-			'type'		 => 'li',
-		];
 
-		if ($id > 0)
-		{
-			echo $this->buttons('usersTabs', $buttonsArgs, ['classActive' => $classActiveLi, 'action' => $action]);
-		}
-		?>
-	</ul>
 
-	<div class="ui-tabs-panel ui-widget-content ui-corner-bottom tab-fixed-content">
-		<!-- content for one tab -->
-        <?=$this->partial((in_array($partialTab, ['history']) ? 'template/'.$partialTab : $controller.'/edit/'.$partialTab))?>
+<div class="row">
+	<div class="col-md-12">
+		<!-- general form elements -->
+		<div class="box box-primary">
+			<div class="box-body">
+                <?//= $this->form(null, null)->openTag($form) ?>
+                <?= $this->form()->openTag($form) ?>
+                <?= $this->formCollection($form) ?>
+
+				<!--<div class="box-footer">
+                    <?/*= $this->formElement($form->get('submit'))*/?>
+				</div>-->
+                <?= $this->form()->closeTag() ?>
+			</div>
+		</div>
 	</div>
-
-</div>
 </div>
