Change resource -> controller

--- a/view/layout/admin/login.phtml
+++ b/view/layout/admin/login.phtml
@@ -25,7 +25,7 @@ $title = $this->sysConfig('design/head/default_title');
     <script src="/media/js/menu-drop-down.js?40"></script>-->
 </head>
 
-<body class="<?= $this->current('resource') . '-' . $this->current('action') ?>">
+<body class="<?= $this->current('controller') . '-' . $this->current('action') ?>">
 <noscript>Для корректной работы <a href="https://www.google.com.ua/search?q=включить+javascript" target="_blank">включите джава скрипты</a> и обновите страницу</noscript>
 <div class="wrapper">
     <div class="content-wrapper clearfix">
