--- a/view/user/admin/login.phtml
+++ b/view/user/admin/login.phtml
@@ -27,7 +27,7 @@
                 <?php /*<tr>
                     <td class="labels lable_login">
                         <a onclick="popUpWindow('<?= $this->url('admin/default', [
-                            'resource' => $this->current('resource'),
+                            'controller' => $this->current('controller'),
                             'action' => 'forgot-password',
                         ]) ?>', 150, 310)">Forget password?</a>
                     </td>
